Dropdown button mobile finally fixed. Hover, checked, focus

--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -480,7 +480,7 @@ select[multiple] {
         margin-right: 0;
       }
 
-      &:hover, &:focus, &::selection {
+      &:hover, &:focus,&:checked {
         &::after {
           background: colors.$button__hover-background;
           color: colors.$btn-secondary-icon__hover;
